Finalizando a emissão de relatórios e atualizando o swagger
