# app/DTO/Reports/SearchTicketByEmployeeAndPeriodDTO.php
@@ -5,8 +5,8 @@ namespace App\DTO\Reports;
 class SearchTicketByEmployeeAndPeriodDTO
 {
     public function __construct(
-        public string $start_date,
-        public string $end_date,
+        public ?string $start_date = null,
+        public ?string $end_date = null,
         public ?int $employee_id = null,
 
     )
